# career-success-agent-suite

./: .gitignore  README.md  Senior-Python-Developer-task-output.md  pyproject.toml
src/: app.py  main.py
src/agents/: career_consultant.py  cv_analyzer.py  index.py  industry_expert.py  loader.py
src/tasks/: career_consulting.py  custom_callback.py  cv_analyzer.py  index.py  industry_requirements.py  loader.py
src/tools/: pdf_reader.py  search_documents.py
